# butterfly-species-classifier

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  download_dataset.py  evaluate_model.py  feature_extraction.cpp  predict_butterfly.py  preprocessing.cpp  requirements.txt  setup.sh  setup_codespace.sh  train_classifier.py
